Revisão de código, testes de código e testes manuais.